# notsokit

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  notsokit.pc  pyproject.toml  run_tests.py  setup.py  version.py
include/notsokit/: compress.hpp  globals.hpp  graph.hpp  io.hpp  scc.hpp
include/notsokit/auxiliary/: vectorcomparator.hpp
include/notsokit/distance/: astar.hpp  dijkstra.hpp  distance.hpp  predecessor.hpp
include/notsokit/graph/: graph.hpp
notsokit/: __init__.py  compress.pxd  compress.pyx  distance.pxd  distance.pyx  globals.pxd  globals.py  graph.pxd  graph.pyx  io.pxd  io.pyx  scc.pxd  scc.pyx
notsokit/cpp/: CMakeLists.txt
notsokit/cpp/compress/: CMakeLists.txt  compress.cpp
notsokit/cpp/distance/: CMakeLists.txt  astar.cpp  dijkstra.cpp  distance.cpp
notsokit/cpp/graph/: CMakeLists.txt  graph.cpp
notsokit/cpp/scc/: CMakeLists.txt  scc.cpp
notsokit/test/: test_compress.py  test_distance.py  test_graph.py  test_io.py  test_scc.py
